# fbsy

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  aftab-it.json  config.example.json  config.mock.example.json  done
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  BRIDGE_BUILD_SPEC.md  CLI.md  CODEBASE_ARCHITECTURE_DECISION.md  CODE_WALKTHROUGH.md  CONFIGURATION.md  DEVELOPMENT.md  DEVICE_COMPATIBILITY.md  FULL_WORKFLOW_PLAN.md  IMPLEMENTATION_PLAN.md  INSTALL_FLOW.md  LOCAL-TEST-PLAN.md  LOGGING_CHECKLIST.md  MIGRATION_FROM_PYTHON.md  NETWORK_SCANNER.md  PACKAGING.md  PRODUCTION_PLAN.md  PULL_SETUP.md  PUSH_SETUP.md  SECURITY.md  TESTING.md  USER_GUIDE.md
docs/old/: DEVELOPMENT.md  RUST_IMPLEMENTATION_PLAN.md
scripts/: README.md  install-hooks.sh  install.ps1  install.sh
src/: lib.rs  main.rs
src/adapters/: config_file.rs  device_placeholder.rs  device_zkteco_tcp.rs  hrms_http.rs  hrms_placeholder.rs  hrms_reqwest.rs  mod.rs  senseface_sqlite.rs
src/application/: autostart.rs  config.rs  dashboard.rs  doctor.rs  install.rs  mod.rs  scanner.rs  senseface.rs  serve.rs  service.rs  setup.rs  sync_once.rs  test_server.rs  update.rs
src/cli/: args.rs  command.rs  dispatch.rs  mod.rs
src/config/: error.rs  impls.rs  mod.rs  model.rs
src/domain/: attendance.rs  event.rs  mod.rs  senseface.rs  sync_result.rs  template.rs
src/ports/: config_store.rs  device.rs  hrms.rs  mod.rs  senseface_store.rs
src/runtime/: job_poller.rs  mod.rs  process.rs  registry.rs  scheduler.rs  senseface_forwarder.rs  sync_state.rs
src/services/: mod.rs
src/support/: log.rs  log_rotation.rs  mod.rs  network.rs  paths.rs  redaction.rs
tests/: api_tests.rs  cli_tests.rs  config_tests.rs  device_protocol_tests.rs  domain_tests.rs  sync_tests.rs  template_tests.rs
