[package]
name = "fingerbridge"
version = "0.2.19"
edition = "2021"
description = "Native biometric attendance bridge for HRMS webhook ingestion"
license = "Proprietary"
publish = false

[[bin]]
name = "fbsy"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["alloc", "std", "clock"] }
clap = { version = "4", features = ["derive", "color", "error-context"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"

directories = "6"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
ratatui = "0.29"
sha2 = "0.10"
self-replace = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

# Add after the skeleton is stable:
# axum = "0.7"
# tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
# tower-http = "0.6"
